Object duplication after activating Dyntopo when changing parameters for new objects #67256

Closed
opened 2019-07-19 20:50:17 +02:00 by Hendrik Jahn · 8 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.80 RC2 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: 38d4483c6a
Worked: (optional)

Short description of error
dyntopo_bug.mp4

Exact steps for others to reproduce the error

  • In Sculpt Mode enable Dyntopo
  • switch to Object mode and add an object
  • edit any value in the appearing window
  • with each update a new object is added / the old one is not deleted.
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.80 RC2 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: `38d4483c6a` Worked: (optional) **Short description of error** [dyntopo_bug.mp4](https://archive.blender.org/developer/F7618625/dyntopo_bug.mp4) **Exact steps for others to reproduce the error** - In Sculpt Mode enable Dyntopo - switch to Object mode and add an object - edit any value in the appearing window - with each update a new object is added / the old one is not deleted.
Author

Added subscriber: @HendrikJahn

Added subscriber: @HendrikJahn

#67669 was marked as duplicate of this issue

#67669 was marked as duplicate of this issue
Hendrik Jahn changed title from Object duplication after enabiling Dyntopo when changing parameters for new objects to Object duplication after activating Dyntopo when changing parameters for new objects 2019-07-19 21:01:51 +02:00
Author

Does not work with any 2.8 version I' ve tested (2.80.64+).

Does not work with any 2.8 version I' ve tested (2.80.64+).

Added subscriber: @zeauro

Added subscriber: @zeauro

I confirm issue. ubuntu 18.04 64bits hash e2b0647272

I confirm issue. ubuntu 18.04 64bits hash e2b0647272c7
Campbell Barton was assigned by Sebastian Parborg 2019-07-24 12:48:55 +02:00

This issue was referenced by cf0f2f2d3d

This issue was referenced by cf0f2f2d3dbf6e90a2c81d59bbdb8af538376f9c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @Matton, @GavinScott, @HARDNAX

Added subscribers: @Matton, @GavinScott, @HARDNAX
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67256
No description provided.