Fix T67256: Add object redo duplicates, after exiting sculpt mode